; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if_ports_used.c_get_test_wake_uuid.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if_ports_used.c_get_test_wake_uuid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@use_test_wakeuuid = common dso_local global i32 0, align 4
@test_wakeuuid = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @get_test_wake_uuid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_test_wake_uuid(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32, i32* @use_test_wakeuuid, align 4
  %5 = call i64 @__improbable(i32 %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %20

7:                                                ; preds = %1
  %8 = load i32, i32* @test_wakeuuid, align 4
  %9 = call i32 @uuid_is_null(i32 %8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %19, label %11

11:                                               ; preds = %7
  %12 = load i32*, i32** %3, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %14, label %18

14:                                               ; preds = %11
  %15 = load i32*, i32** %3, align 8
  %16 = load i32, i32* @test_wakeuuid, align 4
  %17 = call i32 @uuid_copy(i32* %15, i32 %16)
  br label %18

18:                                               ; preds = %14, %11
  store i32 1, i32* %2, align 4
  br label %21

19:                                               ; preds = %7
  store i32 0, i32* %2, align 4
  br label %21

20:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %21

21:                                               ; preds = %20, %19, %18
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}

declare dso_local i64 @__improbable(i32) #1

declare dso_local i32 @uuid_is_null(i32) #1

declare dso_local i32 @uuid_copy(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
